--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>Nurooz-Amin | Backend Developer | DjangoRest Developer</title>
+    <meta name="google-site-verification" content="cCanoFXjiGLpJpRsULm3DfKAqch7vI92_wHHKEqtb-M" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -287,5 +288,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
+
 
 </html>
